--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
+    "@popperjs/core": "2.11.4",
     "bootstrap": "5.1.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.1",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react": "17.0.2",
+    "react-bootstrap": "2.2.1",
+    "react-dom": "17.0.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
