--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "2.11.4",
+    "axios": "^0.26.1",
     "bootstrap": "5.1.3",
     "react": "17.0.2",
     "react-bootstrap": "2.2.1",
